--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 
 body {
   font-size: 1.2rem;
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
   min-height: 4000px;
 }
 
 .hero::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -36,7 +36,7 @@ body {
 }
 
 .hero h1 {
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 6rem;
 }
 
@@ -70,7 +70,7 @@ body {
 
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 3.2rem;
   font-weight: bold;
 }
@@ -95,7 +95,7 @@ body {
 .rsvp h2,
 .gifts h2 {
   color: var(--pink);
-  font-family: 'Sacramento';
+  font-family: "Sacramento";
   font-size: 5rem;
   font-weight: bold;
 }
@@ -116,7 +116,7 @@ body {
 }
 
 .home .couple h3 {
-  font-family: 'Sacramento';
+  font-family: "Sacramento";
   font-size: 2.4rem;
   color: var(--pink);
 }
@@ -142,8 +142,19 @@ body {
   color: var(--pink);
 }
 
-.info {
+/* .info {
   background-color: var(--bg);
+  background-image: url("images/img_bg_3.jpg");
+  color: white;
+  padding-top: 10rem;
+  padding-bottom: 8rem;
+} */
+
+.info {
+  background-image: url("images/img_bg_3.jpg"); /* Gambar latar */
+  background-size: cover; /* Menutup seluruh area */
+  background-position: center; /* Memposisikan di tengah */
+  background-repeat: no-repeat; /* Tidak mengulang gambar */
   color: white;
   padding-top: 10rem;
   padding-bottom: 8rem;
@@ -215,7 +226,7 @@ body {
 }
 
 .timeline::before {
-  content: '';
+  content: "";
   top: 0;
   bottom: 0;
   position: absolute;
@@ -231,7 +242,7 @@ body {
 
 .timeline li::before,
 .timeline li::after {
-  content: '';
+  content: "";
   display: table;
 }
 
@@ -263,7 +274,7 @@ body {
 }
 
 .timeline li .timeline-panel::before {
-  content: '';
+  content: "";
   display: inline-block;
   position: absolute;
   border-top: 15px solid transparent;
@@ -275,7 +286,7 @@ body {
 }
 
 .timeline li .timeline-panel::after {
-  content: '';
+  content: "";
   position: absolute;
   display: inline-block;
   border-top: 14px solid transparent;
@@ -383,6 +394,26 @@ footer li {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.simply-countdown > .simply-section {
+  /* coutndown blocks */
+  background: rgba(241, 78, 149, 0.8);
+
+  position: relative;
+  animation: pulse 1s ease infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
