--- a/style.css
+++ b/style.css
@@ -140,24 +140,26 @@ body {
 .home .heart i {
   margin: auto;
   color: var(--pink);
+  animation: pulse 1s ease infinite;
 }
 
-/* .info {
-  background-color: var(--bg);
-  background-image: url("images/img_bg_3.jpg");
-  color: white;
-  padding-top: 10rem;
-  padding-bottom: 8rem;
-} */
-
 .info {
-  background-image: url("images/img_bg_3.jpg"); /* Gambar latar */
+  background-image: url("img/img_bg_3.jpg"); /* Gambar latar */
   background-size: cover; /* Menutup seluruh area */
   background-position: center; /* Memposisikan di tengah */
   background-repeat: no-repeat; /* Tidak mengulang gambar */
   color: white;
-  padding-top: 10rem;
+  padding-top: 5rem;
   padding-bottom: 8rem;
+}
+
+.info iframe {
+  width: 100%;
+  height: 350px; /* Sesuaikan tinggi sesuai kebutuhan */
+  border: none;
+  border-radius: 15px; /* Membuat sudut yang melengkung */
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); /* Memberikan efek bayangan */
+  margin-top: 20px; /* Memberikan sedikit jarak atas */
 }
 
 .info .alamat {
@@ -173,12 +175,18 @@ body {
   background-color: rgba(255, 255, 255, 0.2) !important;
   color: white !important;
   border: 1px solid #999;
+  height: inherit;
+  box-shadow: 0px 14px 15px -12px rgba(0, 0, 0, 0.25) !important;
 }
 
 .info .card-header {
   border-bottom: 1px solid #999;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
+  font-size: 1.5rem;
+}
+.info .card-body span {
+  font-size: 1.2rem;
 }
 
 .info .card-body {
@@ -187,10 +195,27 @@ body {
 
 .info .card-footer {
   border-top: 1px solid #999;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
+.info a {
+  font-size: 1.2rem;
+  color: var(--pink);
+  background-color: white;
+  box-shadow: var(--shadow);
+  border-radius: 12px; /* Mengatur sudut menjadi rounded */
+  padding: 0.5rem 1rem; /* Opsional: menambah ruang di sekitar teks */
+}
+
+.info a:hover {
+  background-color: var(--pink);
+  color: white;
+}
+
+.info .btn i {
+  margin-right: 0.5rem;
+}
 .story,
 .gallery,
 .rsvp,
@@ -395,6 +420,17 @@ footer li {
   to {
     transform: rotate(360deg);
   }
+}
+
+.fade-in {
+  opacity: 0; /* Hidden initially */
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+/* Animation when the element becomes visible */
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .simply-countdown > .simply-section {
