--- a/style.css
+++ b/style.css
@@ -88,10 +88,28 @@ body {
   padding-bottom: 5rem;
 }
 
+.gallery .ayat-text {
+  padding: 20px; /* Ruang di dalam elemen untuk membuat teks tidak terlalu mepet ke tepi */
+  border-radius: 10px; /* Sudut rounded untuk elemen */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan lembut untuk efek kedalaman */
+  font-size: 1.2rem; /* Ukuran font yang nyaman dibaca */
+  line-height: 1.6; /* Jarak antar baris teks */
+  color: #333333; /* Warna teks gelap agar mudah dibaca di background putih */
+  text-align: center; /* Teks berada di tengah */
+  margin: 20px auto; /* Margin atas dan bawah */
+  max-width: 80%; /* Lebar maksimum elemen */
+  font-weight: 300;
+}
+.gallery .ayat-text p {
+  font-size: 1.2rem;
+  color: #333333;
+  font-weight: 300;
+}
+
 .home h2,
 .info h2,
 .story h2,
-.gallery h2,
+#fh5co-gallery h2,
 .rsvp h2,
 .gifts h2 {
   color: var(--pink);
@@ -151,6 +169,9 @@ body {
   color: white;
   padding-top: 5rem;
   padding-bottom: 8rem;
+  -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.25) !important;
 }
 
 .info iframe {
@@ -174,9 +195,13 @@ body {
 .info .card {
   background-color: rgba(255, 255, 255, 0.2) !important;
   color: white !important;
-  border: 1px solid #999;
+  border: 2px solid rgba(255, 255, 255, 0.5);
   height: inherit;
   box-shadow: 0px 14px 15px -12px rgba(0, 0, 0, 0.25) !important;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 12px;
 }
 
 .info .card-header {
@@ -217,7 +242,7 @@ body {
   margin-right: 0.5rem;
 }
 .story,
-.gallery,
+#fh5co-gallery,
 .rsvp,
 .gifts {
   padding-top: 10rem;
@@ -225,7 +250,7 @@ body {
 }
 
 .story span,
-.gallery span,
+#fh5co-gallery span,
 .gifts span {
   text-transform: uppercase;
   color: #666;
@@ -236,11 +261,40 @@ body {
 }
 
 .story p,
-.gallery p,
-.rsvp p,
+#fh5co-gallery p,
+.rsvp p {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
 .gifts p {
   font-size: 1rem;
   font-weight: 300;
+  margin: 3rem;
+  line-height: 2;
+}
+
+.gifts .list-group-item button {
+  background-color: white;
+  color: var(--pink);
+  border: 1px solid var(--pink);
+}
+.gifts .list-group-item button:hover {
+  background-color: var(--pink);
+  color: white;
+  border: 1px solid var(--pink);
+}
+
+.gifts .list-group-item {
+  border: none;
+  background-color: #fff;
+  padding: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.gifts .list-group-item .fw-bold {
+  font-size: 1.1rem;
+  color: #444;
 }
 
 .timeline {
@@ -453,6 +507,130 @@ footer li {
   }
 }
 
+#fh5co-gallery {
+  padding: 7em 0;
+  clear: both;
+}
+
+@media screen and (max-width: 768px) {
+  #fh5co-gallery {
+    padding: 3em 0;
+  }
+}
+
+#fh5co-gallery-list {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  position: relative;
+  float: left;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+#fh5co-gallery-list li {
+  display: block;
+  padding: 0;
+  margin: 0 0 10px 1%;
+  list-style: none;
+  min-height: 400px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  float: left;
+  clear: left;
+  position: relative;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  border-radius: 7px;
+}
+
+@media screen and (max-width: 480px) {
+  #fh5co-gallery-list li {
+    margin-left: 0;
+  }
+}
+
+#fh5co-gallery-list li a {
+  min-height: 400px;
+  padding: 2em;
+  position: relative;
+  width: 100%;
+  display: block;
+}
+#fh5co-gallery-list li a:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  z-index: 80;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  border-radius: 7px;
+  background: rgba(0, 0, 0, 0.2);
+}
+#fh5co-gallery-list li a:hover:before {
+  background: rgba(0, 0, 0, 0.5);
+}
+#fh5co-gallery-list li a .case-studies-summary {
+  width: auto;
+  bottom: 2em;
+  left: 2em;
+  right: 2em;
+  position: absolute;
+  z-index: 100;
+}
+
+@media screen and (max-width: 768px) {
+  #fh5co-gallery-list li a .case-studies-summary {
+    bottom: 1em;
+    left: 1em;
+    right: 1em;
+  }
+}
+
+#fh5co-gallery-list li a .case-studies-summary span {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 13px;
+  color: rgba(255, 255, 255, 0.7);
+}
+#fh5co-gallery-list li a .case-studies-summary h2 {
+  color: #fff;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  #fh5co-gallery-list li a .case-studies-summary h2 {
+    font-size: 20px;
+  }
+}
+#fh5co-gallery-list li.one-third {
+  width: 32.3%;
+}
+@media screen and (max-width: 768px) {
+  #fh5co-gallery-list li.one-third {
+    width: 49%;
+  }
+}
+@media screen and (max-width: 480px) {
+  #fh5co-gallery-list li.one-third {
+    width: 100%;
+  }
+}
+
 /* Media Query */
 /* Extra large */
 @media (max-width: 1200px) {
@@ -534,7 +712,7 @@ footer li {
 /* mobile phone */
 @media (max-width: 576px) {
   html {
-    font-size: 60%;
+    font-size: 65%;
   }
 
   .simply-countdown > .simply-section {
@@ -559,4 +737,18 @@ footer li {
   .timeline li .timeline-panel::after {
     top: 31px;
   }
+}
+
+.fh5co-loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url(../images/loader.gif) center no-repeat #fff;
+}
+
+.js .animate-box {
+  opacity: 0;
 }
