--- a/style.css
+++ b/style.css
@@ -44,8 +44,13 @@ body {
   font-size: 1.6rem;
 }
 
+.hero .custom-invite {
+  margin-top: 20px;
+  color: var(--pink);
+}
+
 .hero p {
-  font-size: 1.4rem;
+  font-size: 1rem;
 }
 
 .hero a {
@@ -84,7 +89,7 @@ body {
   background-size: cover;
   min-height: 100vh;
   margin-top: -6rem;
-  padding-top: 15rem;
+  padding-top: 12rem;
   padding-bottom: 5rem;
 }
 
@@ -106,7 +111,13 @@ body {
   font-weight: 300;
 }
 
-.home h2,
+.home h2 {
+  color: var(--pink);
+  font-family: "Sacramento";
+  font-size: 4rem;
+  font-weight: bold;
+}
+
 .info h2,
 .story h2,
 #fh5co-gallery h2,
@@ -160,15 +171,15 @@ body {
   color: var(--pink);
   animation: pulse 1s ease infinite;
 }
-
 .info {
-  background-image: url("img/img_bg_3.jpg"); /* Gambar latar */
+  background-image: url("img/bg-prewed.jpg"); /* Gambar latar */
   background-size: cover; /* Menutup seluruh area */
   background-position: center; /* Memposisikan di tengah */
   background-repeat: no-repeat; /* Tidak mengulang gambar */
   color: white;
   padding-top: 5rem;
   padding-bottom: 8rem;
+  z-index: 1; /* Agar konten tetap berada di atas */
   -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.25) !important;
@@ -189,7 +200,8 @@ body {
 
 .info .description {
   font-size: 1rem;
-  font-weight: 300;
+  color: #0a0a0a;
+  font-weight: 400;
 }
 
 .info .card {
@@ -205,13 +217,16 @@ body {
 }
 
 .info .card-header {
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid white !important;
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.2rem;
   font-size: 1.5rem;
+  font-weight: 600;
 }
 .info .card-body span {
   font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
 }
 
 .info .card-body {
@@ -241,6 +256,7 @@ body {
 .info .btn i {
   margin-right: 0.5rem;
 }
+
 .story,
 #fh5co-gallery,
 .rsvp,
@@ -507,14 +523,13 @@ footer li {
   }
 }
 
-#fh5co-gallery {
-  padding: 7em 0;
-  clear: both;
+#fh5co-gallery .fh5co-heading {
+  padding: 20px;
 }
 
 @media screen and (max-width: 768px) {
   #fh5co-gallery {
-    padding: 3em 0;
+    padding: 7rem 0;
   }
 }
 
@@ -688,6 +703,9 @@ footer li {
   html {
     font-size: 65%;
   }
+  .home h2 {
+    font-size: 4rem;
+  }
 
   .simply-countdown > .simply-section {
     padding: 60px;
@@ -713,6 +731,10 @@ footer li {
 @media (max-width: 576px) {
   html {
     font-size: 65%;
+  }
+
+  .home h2 {
+    font-size: 3rem;
   }
 
   .simply-countdown > .simply-section {
