--- a/style.css
+++ b/style.css
@@ -93,24 +93,6 @@ body {
   padding-bottom: 5rem;
 }
 
-.gallery .ayat-text {
-  padding: 20px; /* Ruang di dalam elemen untuk membuat teks tidak terlalu mepet ke tepi */
-  border-radius: 10px; /* Sudut rounded untuk elemen */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan lembut untuk efek kedalaman */
-  font-size: 1.2rem; /* Ukuran font yang nyaman dibaca */
-  line-height: 1.6; /* Jarak antar baris teks */
-  color: #333333; /* Warna teks gelap agar mudah dibaca di background putih */
-  text-align: center; /* Teks berada di tengah */
-  margin: 20px auto; /* Margin atas dan bawah */
-  max-width: 80%; /* Lebar maksimum elemen */
-  font-weight: 300;
-}
-.gallery .ayat-text p {
-  font-size: 1.2rem;
-  color: #333333;
-  font-weight: 300;
-}
-
 .home h2 {
   color: var(--pink);
   font-family: "Sacramento";
@@ -147,6 +129,7 @@ body {
 .home .couple h3 {
   font-family: "Sacramento";
   font-size: 2.4rem;
+  font-weight: 600;
   color: var(--pink);
 }
 
@@ -172,14 +155,14 @@ body {
   animation: pulse 1s ease infinite;
 }
 .info {
-  background-image: url("img/bg-prewed.jpg"); /* Gambar latar */
-  background-size: cover; /* Menutup seluruh area */
-  background-position: center; /* Memposisikan di tengah */
-  background-repeat: no-repeat; /* Tidak mengulang gambar */
+  background-image: url("img/bg-prewed.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 1;
   color: white;
   padding-top: 5rem;
   padding-bottom: 8rem;
-  z-index: 1; /* Agar konten tetap berada di atas */
   -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.25) !important;
@@ -279,8 +262,8 @@ body {
 .story p,
 #fh5co-gallery p,
 .rsvp p {
-  font-size: 1rem;
-  font-weight: 300;
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 
 .gifts p {
@@ -306,11 +289,48 @@ body {
   background-color: #fff;
   padding: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .gifts .list-group-item .fw-bold {
   font-size: 1.1rem;
   color: #444;
+}
+
+.gifts {
+  padding: 60px 0;
+  background-color: #f8f9fa;
+  text-align: center;
+}
+
+.bank-logo {
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+}
+.btn-copy i {
+  margin-right: 8px; /* Jarak antara ikon dan teks */
+}
+
+/* Responsive */
+@media (max-width: 576px) {
+  .list-group-item {
+    padding: 1rem;
+  }
+
+  .bank-logo {
+    width: 60px;
+    height: 60px;
+  }
+
+  .fw-bold {
+    font-size: 1em;
+  }
+
+  .btn-copy {
+    width: 50%; /* Set width to 50% */
+    margin: 0 auto; /* Center the button */
+  }
 }
 
 .timeline {
@@ -413,9 +433,42 @@ body {
 .gallery {
   background-color: #f5f5f5;
 }
-
 .rsvp {
-  background-color: var(--bg);
+  position: relative;
+  padding-top: 5rem;
+  padding-bottom: 8rem;
+  -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.25) !important;
+  overflow: hidden; /* Untuk mencegah elemen keluar dari section */
+}
+
+.background-blur {
+  background-image: url("img/bg.png");
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Pastikan background ada di belakang */
+  filter: blur(4px); /* Filter blur diterapkan pada gambar */
+  background-size: cover;
+  background-position: center;
+}
+
+.rsvp .form-label {
+  color: var(--pink);
+}
+
+.container {
+  position: relative;
+  z-index: 1; /* Agar konten tetap di atas background */
+}
+
+/* Style untuk select */
+.form-select {
+  color: black; /* Warna teks */
+  border-color: var(--pink);
 }
 
 .rsvp h2 {
@@ -423,7 +476,7 @@ body {
 }
 
 .rsvp p {
-  color: white;
+  color: #999;
 }
 
 .rsvp form label {
